--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "react-hook-form": "^7.19.3",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
     "tailwind-react-native-classnames": "^1.5.1",
-    "uuid": "^8.3.2",
     "valid-url": "^1.0.9",
     "yup": "^0.32.11"
   },
