--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@hookform/resolvers": "^2.8.3",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "add": "^2.0.6",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
     "expo-image-picker": "~11.0.3",
@@ -25,10 +26,12 @@
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-select-dropdown": "^1.4.0",
     "react-native-web": "0.17.1",
     "recoil": "^0.5.2",
     "tailwind-react-native-classnames": "^1.5.1",
     "valid-url": "^1.0.9",
+    "yarn": "^1.22.17",
     "yup": "^0.32.11"
   },
   "devDependencies": {
