--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@hookform/resolvers": "^2.8.3",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@stripe/stripe-react-native": "0.2.2",
     "add": "^2.0.6",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
@@ -22,6 +23,7 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^7.19.3",
     "react-native": "0.64.3",
+    "react-native-dotenv": "^3.3.0",
     "react-native-elements": "^3.4.2",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-safe-area-context": "3.3.2",
