--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-react-native": "0.2.2",
     "add": "^2.0.6",
     "axios": "^0.24.0",
+    "date-fns": "^2.27.0",
     "expo": "~43.0.2",
     "expo-image-picker": "~11.0.3",
     "expo-linear-gradient": "~10.0.3",
